Made the card homepage

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,21 +1,23 @@
-@import "./abstract/functions";
-@import "./abstract/mixins";
-@import "./abstract/variables";
-@import "./abstract/utilities";
+@import './abstract/functions';
+@import './abstract/mixins';
+@import './abstract/variables';
+@import './abstract/utilities';
 
-@import "./base/base";
-@import "./base/typography";
+@import './components/side-nav';
+@import './components/user-nav';
+@import './components/login';
+@import './components/card';
+@import './components/logo';
+@import './components/button';
+@import './components/answer-form';
 
-@import "./components/story";
-@import "./components/aboutUs";
-@import "./components/button";
-@import "./components/card";
+@import './base/base';
+@import './base/typography';
 
-@import "./layout/footer";
-@import "./layout/grid";
-@import "./layout/header";
-@import "./layout/contactUs";
-@import "./layout/navigation";
-@import "./layout/features";
+@import './layout/content';
+@import './layout/overview';
+@import './layout/sidebar';
+@import './layout/header';
+@import './layout/card-grid';
 
-@import "./pages/home";
+@import './pages/home';
