--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -1,1 +1,32 @@
-$font-main: "Lato", Sans-Serif;
+/*** COLOURS ***/
+// https://colorhunt.co/palette/213441
+
+$color-primary: #9ab3f5;
+$color-primary-light: #a3d8f4;
+$color-primary-dark: #7579e7;
+
+$color-secondary-dark: #951227;
+$color-secondary: #e94560;
+$color-secondary-light: #f08294;
+
+$color-green-right: #24a19c;
+$color-red-wrong: #e84a5f;
+
+$color-grey-light-1: #faf9f9;
+$color-grey-light-2: #f4f2f2;
+$color-grey-light-3: #f0eeee;
+$color-grey-light-4: #ccc;
+
+$color-grey-dark-1: #333;
+$color-grey-dark-2: #777;
+$color-grey-dark-3: #999;
+
+/*** BOX SHADOWS ***/
+$shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+$shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+/*** BORDER LINE ***/
+$line: 1px solid var(--color-grey-light-2);
+
+/*** FONT ***/
+$font-main: 'Lato', Sans-Serif;
