--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -26,3 +26,27 @@
     color: $color-grey-light-1;
   }
 }
+
+.btn--btn-login {
+  text-transform: uppercase;
+  font-size: 1.6rem;
+
+  & {
+    color: $color-grey-dark-1;
+    text-decoration: none;
+    border: 1px solid transparent;
+    padding: 1.2rem 3rem;
+    border-radius: 100rem;
+    // transform: translateY(0);
+    transition: all 200ms;
+    width: 100%;
+    background-color: rgba(#fff, 0.9);
+    cursor: pointer;
+  }
+
+  &:hover {
+    background-color: $color-secondary;
+    // transform: translateY(1rem);
+    color: $color-grey-light-1;
+  }
+}
