Connected the site to the API using TOKEN AUTH and NOT COOKIE SESSIONS, Uses can login and get their cards - working on making cards NOW!

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -1,5 +1,6 @@
 /*** COLOURS ***/
 // https://colorhunt.co/palette/213441
+// https://www.grabient.com/
 
 $color-primary: #9ab3f5;
 $color-primary-light: #a3d8f4;
@@ -8,6 +9,10 @@ $color-primary-dark: #7579e7;
 $color-secondary-dark: #951227;
 $color-secondary: #e94560;
 $color-secondary-light: #f08294;
+
+$color-tertiary-1: #ff99ac;
+$color-tertiary-2: #ff6a88;
+$color-tertiary-3: #ff9a8b;
 
 $color-green-right: #24a19c;
 $color-red-wrong: #e84a5f;
