--- a/src/sass/components/_answer-form.scss
+++ b/src/sass/components/_answer-form.scss
@@ -7,6 +7,7 @@
     transition: all 250ms;
 
     &--right {
+      margin-right: 2rem;
       fill: $color-green-right;
       transform: scale(1);
 
