--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -6,6 +6,7 @@
   box-shadow: 0.5rem 0.8rem 1rem rgba(#000, 0.2);
   transform: scale(1);
   transition: all 200ms;
+  width: 70%;
 
   display: flex;
   flex-direction: column;
@@ -17,6 +18,7 @@
     text-align: center;
     text-transform: uppercase;
     padding: 0 2rem;
+    color: $color-grey-dark-3;
   }
 
   &:hover {
