--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -35,7 +35,7 @@
   &__link:visited {
     color: $color-grey-dark-3;
     text-decoration: none;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     transition: all 200ms;
   }
 
