--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './components/button';
 @import './components/answer-form';
 @import './components/form';
+@import './components/alert';
 
 @import './base/base';
 @import './base/typography';
