Finished the design for 'Make A Card' now moving onto the API POST for the card

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -6,7 +6,7 @@ $color-primary: #9ab3f5;
 $color-primary-light: #a3d8f4;
 $color-primary-dark: #7579e7;
 
-$color-secondary-dark: #951227;
+$color-secondary-dark: #d11937;
 $color-secondary: #e94560;
 $color-secondary-light: #f08294;
 
