--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -2,7 +2,10 @@
   width: 25rem;
   height: 70rem;
   background-color: $color-grey-dark-1;
+  box-shadow: 0 20rem 20rem rgba(#000, 0.2);
+  z-index: 100;
   display: flex;
   flex-flow: column;
   justify-content: space-between;
+  // border-radius: 5px;
 }
