Re-did sass components, fixed the login bug (hack fix)

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -43,6 +43,7 @@
     color: $color-grey-light-3;
     width: 90%;
     transition: all 200ms;
+    box-shadow: 0 0.8rem 1rem rgba(#000, 0.2);
   }
 
   &--switch:hover,
