--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/card';
 @import './components/logo';
 @import './components/button';
+@import './components/icon';
 @import './components/answer-form';
 @import './components/login-form';
 @import './components/alert';
