--- a/src/sass/components/_alert.scss
+++ b/src/sass/components/_alert.scss
@@ -9,7 +9,8 @@
   color: $color-grey-light-1;
   font-size: 2rem;
   font-weight: 300;
-  width: 30vw;
+  max-width: 50vw;
+  word-break: break-word;
   text-align: center;
 
   &-type--success {
