--- a/src/sass/layout/_overview.scss
+++ b/src/sass/layout/_overview.scss
@@ -3,6 +3,7 @@
   height: 70rem;
   background-color: $color-secondary;
   overflow-y: scroll;
+  overflow-x: hidden;
   // margin-bottom: 2rem;
   // scrollbar-color: $color-grey-dark-1;
   // scrollbar-width: thin;
