Add the styles to edit and delete, will now move onto implementing delete card and edit card

--- a/src/sass/components/_icon.scss
+++ b/src/sass/components/_icon.scss
@@ -11,6 +11,26 @@
     transform: scale(1);
   }
 
+  &--options {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
+  &--edit {
+    fill: $color-primary-dark;
+    transform: scale(1);
+  }
+
+  &--delete {
+    fill: $color-secondary-dark;
+    transform: scale(1);
+  }
+
   &--card {
     width: 3.75rem;
     height: 1.75rem;
