--- a/src/sass/layout/_make-classroom-grid.scss
+++ b/src/sass/layout/_make-classroom-grid.scss
@@ -1,5 +1,5 @@
 .make-classroom-grid {
-  display: box;
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: repeat(2, min-content);
   // justify-items: center;
