--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/logo';
 @import './components/button';
 @import './components/icon';
+@import './components/options';
 @import './components/answer-form';
 @import './components/login-form';
 @import './components/alert';
