--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -15,7 +15,7 @@ $color-tertiary-2: #ff6a88;
 $color-tertiary-3: #ff9a8b;
 
 $color-green-right: #24a19c;
-$color-red-wrong: #862936;
+$color-red-wrong: #ff4b5c;
 
 $color-grey-light-1: #faf9f9;
 $color-grey-light-2: #f4f2f2;
