--- a/src/sass/components/_alert.scss
+++ b/src/sass/components/_alert.scss
@@ -3,15 +3,17 @@
   left: 50%;
   top: 0;
   transform: translate(-50%, 0);
-  padding: 1rem 2rem;
+  padding: 1rem 4rem;
+  padding-bottom: 1.5rem;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   color: $color-grey-light-1;
   font-size: 2rem;
   font-weight: 300;
-  max-width: 50vw;
+  width: 30vw;
   word-break: break-word;
   text-align: center;
+  z-index: 9999;
 
   &-type--success {
     background-color: $color-green-right;
