--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -7,6 +7,8 @@
   transform: scale(1);
   transition: all 200ms;
   width: 70%;
+  position: relative;
+  backface-visibility: hidden;
 
   display: flex;
   flex-direction: column;
@@ -19,6 +21,18 @@
     text-transform: uppercase;
     padding: 0 2rem;
     color: $color-grey-dark-3;
+  }
+
+  &__options {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: flex;
+    flex-direction: column;
+
+    & > *:not(:last-child) {
+      margin-bottom: 1.5rem;
+    }
   }
 
   &__name {
