Made update and delete card, working and tested for bugs

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './components/button';
 @import './components/icon';
 @import './components/options';
+@import './components/window';
 @import './components/answer-form';
 @import './components/login-form';
 @import './components/alert';
