Sidebar nav now renders active onto an item that is clicked

--- a/src/sass/components/_icon.scss
+++ b/src/sass/components/_icon.scss
@@ -1,6 +1,10 @@
 .icon {
   transition: all 250ms;
 
+  &--no-card {
+    fill: $color-grey-dark-1;
+  }
+
   &--right {
     fill: $color-green-right;
     transform: scale(1);
