--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import './components/icon';
 @import './components/options';
 @import './components/window';
+@import './components/no-item';
 @import './components/answer-form';
 @import './components/login-form';
 @import './components/alert';
