--- a/src/sass/components/_deck.scss
+++ b/src/sass/components/_deck.scss
@@ -7,11 +7,23 @@
   transform: scale(1);
   transition: all 200ms;
   width: 70%;
+  position: relative;
 
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 100%;
+  //   border-radius: 3px;
+  //   background-color: $color-grey-light-2;
+  //   transform: translateX(50rem);
+  //   z-index: -90;
+  // }
 
   &__details {
     font-size: 1.4rem;
