--- a/src/sass/layout/_make-deck-grid.scss
+++ b/src/sass/layout/_make-deck-grid.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: repeat(2, min-content);
-  // justify-items: center;
-  //align-items: center;
+  justify-content: space-around;
+  // align-items: center;
+
+  grid-row-gap: 4rem;
 }
