--- a/src/sass/components/_make-deck.scss
+++ b/src/sass/components/_make-deck.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     // justify-content: center;
-    margin: 2rem 0 0 0;
+    margin: 2rem 0 0 2rem;
 
     & > *:not(:last-child) {
       margin-right: 2rem;
@@ -60,7 +60,7 @@
 
   &__label {
     font-size: 1.6rem;
-    font-weight: 300;
+    font-weight: 400;
     margin-bottom: 1rem;
     text-transform: uppercase;
     letter-spacing: 0.05rem;
@@ -103,7 +103,7 @@
   &__span {
     text-transform: uppercase;
     font-size: 1.3rem;
-    font-weight: 300;
+    font-weight: 400;
 
     &:not(:last-child) {
       margin-bottom: 1rem;
