--- a/src/sass/components/_make-deck.scss
+++ b/src/sass/components/_make-deck.scss
@@ -20,9 +20,19 @@
 
   &__group {
     width: 100%;
-    // &:not(:last-of-type) {
-    //   margin-bottom: 2rem;
-    // }
+    margin-top: 1rem;
+  }
+
+  &__paginate {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 2rem 0;
+
+    background-color: $color-grey-dark-1;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    backface-visibility: hidden;
   }
 
   &__input {
