--- a/src/sass/components/_make-deck.scss
+++ b/src/sass/components/_make-deck.scss
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    padding: 2rem 0;
+    padding: 1rem 0;
 
     background-color: $color-grey-dark-1;
     border-bottom-left-radius: 3px;
@@ -139,7 +139,7 @@
   &__card-nav {
     background-color: $color-grey-light-2;
     border-radius: 3px;
-    height: 50rem;
+    // height: 50rem;
     text-align: center;
     width: 80%;
     box-shadow: 0 2rem 3rem rgba(black, 0.2);
