--- a/src/sass/components/_deck.scss
+++ b/src/sass/components/_deck.scss
@@ -25,6 +25,18 @@
   //   z-index: -90;
   // }
 
+  &__options {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: flex;
+    flex-direction: column;
+
+    & > *:not(:last-child) {
+      margin-bottom: 1.5rem;
+    }
+  }
+
   &__details {
     font-size: 1.4rem;
     text-align: center;
