--- a/src/sass/components/_classroom.scss
+++ b/src/sass/components/_classroom.scss
@@ -1,7 +1,7 @@
 .classroom {
-  background-color: $color-primary-light;
+  background-color: $color-grey-light-2;
   margin: 2rem 4rem;
-  height: 20rem;
+  height: 35rem;
   border-radius: 3px;
   box-shadow: 0.5rem 0.8rem 1rem rgba(#000, 0.2);
   transform: scale(1);
@@ -18,7 +18,7 @@
     text-align: center;
     text-transform: uppercase;
     padding: 0 2rem;
-    color: $color-grey-dark-1;
+    color: $color-grey-dark-3;
   }
 
   &__name {
