--- a/src/sass/components/_make-deck.scss
+++ b/src/sass/components/_make-deck.scss
@@ -33,6 +33,8 @@
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     backface-visibility: hidden;
+
+    box-shadow: 0.3rem 0 1.5rem rgba(black, 0.2);
   }
 
   &__input {
@@ -134,6 +136,7 @@
     font-size: 1.4rem;
     text-transform: uppercase;
     background-color: $color-grey-dark-1;
+    box-shadow: 0 0.3rem 1.5rem rgba(black, 0.2);
   }
 
   &__card-nav {
@@ -162,6 +165,7 @@
   &__list {
     list-style: none;
     // margin-top: 2rem;
+    height: 70%;
   }
 
   &__item {
