--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -14,6 +14,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  cursor: pointer;
 
   &__details {
     font-size: 1.4rem;
