--- a/src/sass/components/_deck.scss
+++ b/src/sass/components/_deck.scss
@@ -14,6 +14,8 @@
   justify-content: space-evenly;
   align-items: center;
 
+  cursor: pointer;
+
   // &::before {
   //   content: '';
   //   position: absolute;
