--- a/src/sass/components/_make-classroom.scss
+++ b/src/sass/components/_make-classroom.scss
@@ -27,12 +27,14 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    padding: 2rem 0;
+    padding: 1rem 0;
 
     background-color: $color-grey-dark-1;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     backface-visibility: hidden;
+
+    box-shadow: 0.3rem 0 1.5rem rgba(black, 0.2);
   }
 
   &__input {
@@ -86,6 +88,13 @@
     // align-self: end;
   }
 
+  &__create-box {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    display: flex;
+    text-align: center;
+  }
+
   &--switch,
   &--right,
   &--wrong {
@@ -103,8 +112,7 @@
     color: $color-grey-dark-1;
   }
 
-  // user-details from 'card-details'
-  &__user-details {
+  &__card-details {
     display: flex;
     flex-flow: column;
     width: 100%;
@@ -135,36 +143,55 @@
     font-size: 1.4rem;
     text-transform: uppercase;
     background-color: $color-grey-dark-1;
+    box-shadow: 0 0.3rem 1.5rem rgba(black, 0.2);
   }
 
-  &__user-nav {
+  &__student-nav,
+  &__deck-nav {
     background-color: $color-grey-light-2;
     border-radius: 3px;
-    height: 50rem;
+    // height: 50rem;
     text-align: center;
     width: 80%;
     box-shadow: 0 2rem 3rem rgba(black, 0.2);
 
-    &--curr-users {
-      grid-column: 3 / -1;
-      margin: 0 auto;
+    margin: 0 auto;
+    height: min-content;
+
+    &--deck-curr {
+      grid-column: 2 / 3;
+      grid-row: 3 / -1;
     }
 
-    &--all-users {
-      margin: 0 auto;
+    &--users-student {
     }
+  }
+
+  &__card-switch {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
 
   &__list {
     list-style: none;
     // margin-top: 2rem;
+    height: 70%;
   }
 
   &__item {
     &:not(:last-child) {
       border-bottom: 1px solid $color-grey-dark-1;
     }
+
+    &:not(:first-child) {
+      padding-top: 2rem;
+    }
+
+    &:first-child {
+      padding-top: 1em;
+    }
     padding-bottom: 2rem;
+
     text-align: left;
     background-color: transparent;
     transition: all 200ms;
