--- a/src/sass/components/_classroom.scss
+++ b/src/sass/components/_classroom.scss
@@ -14,6 +14,18 @@
   align-items: center;
   cursor: pointer;
 
+  &__options {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: flex;
+    flex-direction: column;
+
+    & > *:not(:last-child) {
+      margin-bottom: 1.5rem;
+    }
+  }
+
   &__details {
     font-size: 1.4rem;
     text-align: center;
