--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,6 +9,7 @@
 html {
   font-size: 62.5%; // 1 rem = 10px;
   box-sizing: border-box;
+  overflow: hidden;
 
   // @include respond(tab-land) {
   //   font-size: 56.25%;
