--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import './components/classroom';
 @import './components/make-classroom';
 @import './components/view-classroom';
+@import './components/update-settings';
 
 @import './base/base';
 @import './base/typography';
