--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -34,6 +34,10 @@
     & > *:not(:last-child) {
       margin-bottom: 1.5rem;
     }
+
+    &--hide {
+      display: none;
+    }
   }
 
   &__name {
