--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -42,7 +42,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 
-  min-height: 100vh; // FIXME: REMOVE AT FINAL BUILD
+  min-height: 100vh; 
   color: $color-grey-dark-2;
   // position: relative;
 }
